--- a/template/index.html
+++ b/template/index.html
@@ -4,8 +4,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"> -->
+    <style>
+        *,body,html{
+            padding: 0;
+            margin: 0;
+        }
+    </style>
     <body>
-    <div id="app"></div>
-</body>
+        <div id="app"></div>
+    </body>
 </html>
